@@ -4,6 +4,8 @@ import org.lafabrique_epita.application.dto.media.CommentDtoMapper;
 import org.lafabrique_epita.application.dto.media.GenreDtoMapper;
 import org.lafabrique_epita.domain.entities.SerieEntity;
 
+import java.util.stream.Collectors;
+
 public class SeriePostDtoResponseMapper {
 
     private SeriePostDtoResponseMapper() {
@@ -24,12 +26,12 @@ public class SeriePostDtoResponseMapper {
                 serieEntity.getScore(),
                 serieEntity.getGenres().stream()
                         .map(GenreDtoMapper::convertToDto)
-                        .toList(),
+                        .collect(Collectors.toList()),
                 serieEntity.getComments().stream()
                         .map(CommentDtoMapper::convertToDto)
-                        .toList(),
+                        .collect(Collectors.toList()),
                 serieEntity.getSeasons().stream()
-                        .map(SeasonPostDtoMapper::convertToDto).toList()
+                        .map(SeasonPostDtoMapper::convertToDto).collect(Collectors.toList())
         );
     }
 
